Changelog
=========

4.4-dev - (unreleased)
----------------------

4.3 - (2011-11-23)
------------------
* Change: commented the eea.locationwidget widget for QuickEvent, as it is
  already provided by the geotags subtyper [tiberich #4763]
* Change: add instruction when editing location widgets [tiberich #4763]
* Bug fix: hide metadata fields for quickevent [tiberich #4763]
* Bug fix: make all fields appear in the default schemata [tiberich #4763]
* Bug fix: show location when viewing a QuickEvent [tiberich #4763]

4.2 - (2011-11-22)
------------------
* Cleanup: Fixed all pylint, pyflakes warnings
  [voineali]
* Bug fix: added workaround for failure to get filename for RSS enclosures
 [tiberich #4746]

4.1 - (2011-11-21)
------------------
* Bug fix: Removed themes from ExternalDataSpec schema as this CT gets themes
  from back references
  [voineali #4740]
* Bug fix: added header for rssAllowed script [tiberich #4738]
* Bug fix: make getModifiedDate return a DateTime object for folder based feeds [tiberich #4739]

4.0 - (2011-11-18)
------------------
 * Bug fix: Removed date fields from frontpage tab [szabozo #4708]
 * Bug fix: Only include languages which have a translated eea homepage [demarant]
 * Bug fix: Added missing image scales on the image field for IExternalHighlights [demarant]
 * Change: Made eea geotag required for IExternalHighlight via schemaextender
   [demarant #4694]
 * Change: Migrated promolink_view from custom [szabozo0 #4161]
 * Bug fix: Added on-error handler to related_multimedia portlet, it
   triggers errors in portal_relations view [tiberich #4690]
 * Change: Migrated portlet_center_map from custom [szabozo0 #4161]
 * Change: Migrated flashfileStyle, rssAllowed from custom [szabozo0 #4161 #4685]
 * Bug fix: make document_mediatop_view use standard macros for viewing documents [tiberich #4681]
 * Change: Migrated cft_listing from custom [szabozo0 #4161 #4685]
 * Bug fix: Enabled resize.js [szabozo0 #4667]